feat: implementação do método de busca pelo identificador, melhoria no nome dos métodos e criação de rule para validar pedido não encontrado
